@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-20T08:15:25Z",
-  "count" : 10,
-  "count_minmax" : [ 10, 10 ],
-  "count_decinc" : [ -0, +10 ],
-  "uniques" : 7,
-  "uniques_minmax" : [ 7, 7 ],
-  "uniques_decinc" : [ -0, +7 ]
+  "timestamp" : "2022-05-20T16:16:47Z",
+  "count" : 11,
+  "count_minmax" : [ 10, 11 ],
+  "count_decinc" : [ -0, +11 ],
+  "uniques" : 8,
+  "uniques_minmax" : [ 7, 8 ],
+  "uniques_decinc" : [ -0, +8 ]
 }
