@@ -1,5 +1,5 @@
 {
-  "count": 52,
+  "count": 53,
   "uniques": 18,
   "clones": [
     {
@@ -69,8 +69,8 @@
     },
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 10,
-      "uniques": 7
+      "count": 11,
+      "uniques": 8
     }
   ]
 }
