@@ -1,3 +1,10 @@
+2022-05-20T16:16:47Z:
+* notice: last 14d: unq all: 18 53
+* notice: prev accum: outdated-unq outdated-all / unq all: 136 270 / 170 322
+* notice: next accum: outdated-unq outdated-all / unq all: 136 270 / 171 323
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +8 +11 -0 -0 / 8 11
+* notice: changed dates: [2022-05-20]
+
 2022-05-20T08:15:25Z:
 * notice: last 14d: unq all: 18 52
 * notice: prev accum: outdated-unq outdated-all / unq all: 136 270 / 163 312
